--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+* {
+  margin: 10px;
+  padding: 2px;
+  background-color: black;
+}
+
 .App {
   text-align: center;
+  padding: 5%;
+  background-color: #282c34;
 }
 
 .App-logo {
@@ -35,4 +43,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Job {
+  color: rgb(21, 255, 0);
+  background-color: rgb(78, 78, 207);
 }
